packages/idris_db/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:idris_db/idris_db.dart';

@collection
class Model {
  late int id;

  late Set<String>? prop;
}
